[project]
name = "carpoolerbot"
version = "0.1.0"
description = "Interactive Telegram bot useful to do carpooling"
readme = "README.md"
authors = [
    { name = "Lorenzo Bevilacqua", email = "43483037+ardubev16@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings==2.7.0",
    "python-telegram-bot[job-queue]==21.9",
    "sqlalchemy==2.0.36",
]

[dependency-groups]
dev = ["ruff==0.8.4"]

[project.scripts]
carpoolerbot = "carpoolerbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnknownMemberType = false
reportUnknownVariableType = false

[tool.ruff]
extend = "./sync-config/pyproject.toml"

[tool.ruff.lint]
ignore = [
    "S101", # Checks for uses of the assert keyword.
]
